...
                                .fillMaxWidth(0.88f)
                                .onFocusChanged { focusState ->
                                    isFocused = focusState.isFocused && state.isInternetAvailable
                                }
                                .height(
                                    if (isFocused) 120.dp else 56.dp
                                ).testTag("input_field"),
                        )
                        IconButton(
                            onClick = {
                                onAction(ChatAction.SendMessage(state.query))
                                onAction(ChatAction.ontextChange(""))

...
                                .clip(
                                    CircleShape
                                )
                                .background(
                                    color = if (state.isInternetAvailable) MaterialTheme.colorScheme.primary
                                    else ButtonSecondary
                                ).testTag("send")
                        ) {
                            Icon(
                                painter = painterResource(R.drawable.send),
                                contentDescription = null,
                                tint = Color.Unspecified,
                                modifier = Modifier
...
