<resources>
    <string name="app_name">Smart Step</string>
    <string name="background_access_helps_smart_step_track_compact">Background access helps Smart Step track \n your activity more reliably.</string>
    <string name="step_count">7,842</string>
    <string name="calorie_Count">342</string>
    <string name="more">More</string>
    <string name="try_again">Try again</string>
    <string name="connect_to_the_internet_to_get_ai_insights">📡 Connect to the internet to get AI insights.</string>
    <string name="ask_me_anything">Ask me anything...</string>
    <string name="online_connection_required">Online connection required</string>

</resources>