...

    }
    LazyColumn(
        state = scrollState,

        modifier = modifier.fillMaxSize().padding( 16.dp).semantics{
            testTag = "chat_window"
        },
        horizontalAlignment = if(windowSizeClass == WindowWidthSizeClass.COMPACT)
            Alignment.Start else Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(8.dp)
    ) {
        items(list) {
...
